EnrichmentApply changes